# boss-admin

./: .gitignore  README.md
backend-flask/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  gunicorn.conf.py  messages.pot  pyproject.toml
backend-flask/.github/workflows/: ci.yml
backend-flask/app/: __init__.py  commands.py  config.py  errors.py  exceptions.py  extensions.py  i18n.py
backend-flask/app/constants/: upload.py
backend-flask/app/enums/: response_codes.py
backend-flask/app/models/: __init__.py  base.py  best_sellers.py  department.py  menu.py  position.py  role.py  user.py
backend-flask/app/repositories/: department.py  role.py  user_repository.py
backend-flask/app/schemas/: auth.py  department.py
backend-flask/app/security/: auth.py
backend-flask/app/services/: asin_service.py  auth_service.py  department_service.py  role_service.py  user_service.py
backend-flask/app/storage/: __init__.py  base.py  factory.py  imgbb.py  validators.py
backend-flask/app/tasks/: crawl_task.py  scheduler.py
backend-flask/app/translations/zh/LC_MESSAGES/: messages.mo  messages.po
backend-flask/app/utils/: auth.py  captcha.py  db.py  logger.py  parse_time.py  request.py  response.py  validators.py
backend-flask/app/views/: __init__.py  auth.py  captcha.py  department.py  health.py  role.py  user.py
backend-flask/docs/: code-quality.md  deployment.md  i18n.md  testing.md
backend-flask/migrations/versions/: 296b2b43ef35_add_position_id_to_user_table.py  349311908bf2_add_avatar_to_user.py  35c7105ec44d_add_fields_to_department_model_leader.py  6a55a893be9b_initial_state.py  7973860dac18_add_fields_to_department_model_order_.py  999147c4e58a_department_add_status.py  bce57563ef90_remove_status_remark_and_is_delete_from_.py
backend-flask/scripts/: auth.json  run_spider.py
backend-flask/tests/: conftest.py
backend-flask/tests/helpers/: fake_redis.py
backend-flask/tests/integration/: test_auth_api.py  test_captcha_api.py  test_department_api.py  test_user_api.py
backend-flask/tests/orm/: test_department_model.py  test_session_scope.py
backend-flask/tests/unit/: test_base_model.py  test_captcha.py  test_parse_time.py  test_response.py  test_validators.py
frontend-next/: .gitignore  .prettierrc  README.md  next.config.mjs  package.json  pnpm-lock.yaml
(+42 files in other folders)
